UpdatedDisplaySettingsDTO
