# backend/myndla-api/src/main/scala/no/ndla/myndlaapi/model/api/UpdatedQuizDTO.scala
@@ -10,7 +10,6 @@ package no.ndla.myndlaapi.model.api
 
 import io.circe.generic.semiauto.{deriveDecoder, deriveEncoder}
 import io.circe.{Decoder, Encoder}
-import no.ndla.myndlaapi.model.domain.DisplaySettings
 import sttp.tapir.Schema.annotations.description
 
 @description("Input for updating a quiz")
@@ -22,7 +21,7 @@ case class UpdatedQuizDTO(
     @description("Quiz description")
     description: Option[String],
     @description("Display settings")
-    displaySettings: Option[DisplaySettings],
+    displaySettings: Option[UpdatedDisplaySettingsDTO],
 )
 object UpdatedQuizDTO {
   implicit val encoder: Encoder[UpdatedQuizDTO] = deriveEncoder
